--- a/src/app/private/header/header.component.html
+++ b/src/app/private/header/header.component.html
@@ -67,60 +67,9 @@
                 ></a>
               </div>
             </div>
-            <ul ngbNav #nav="ngbNav" class="nav drp-tabs nav-fill nav-tabs">
-              <li ngbNavItem="1">
-                <a ngbNavLink>
-                  <i antIcon theme="outline" type="user" class="me-2"></i>
-                  Profile
-                </a>
-                <ng-template ngbNavContent>
-                  @for (task of profile; track task) {
-                  <div>
-                    <a class="dropdown-item">
-                      <i
-                        class="text-muted"
-                        antIcon
-                        theme="outline"
-                        type="{{ task.icon }}"
-                      ></i>
-                      <span [routerLink]="task.url">{{ task.title }}</span>
-                    </a>
-                  </div>
-                  }
-                  <div>
-                    <a class="dropdown-item">
-                      <i
-                        class="text-muted"
-                        antIcon
-                        theme="outline"
-                        type="logout"
-                      ></i>
-                      <span (click)="onLogout()">Logout</span>
-                    </a>
-                  </div>
-                </ng-template>
-              </li>
-              <li ngbNavItem="2">
-                <a ngbNavLink>
-                  <i class="me-2" antIcon theme="outline" type="setting"></i>
-                  Setting
-                </a>
-                <ng-template ngbNavContent>
-                  @for (task of setting; track task) {
-                  <div>
-                    <a class="dropdown-item">
-                      <i
-                        class="text-muted"
-                        antIcon
-                        theme="outline"
-                        type="{{ task.icon }}"
-                      ></i>
-                      <span>{{ task.title }}</span>
-                    </a>
-                  </div>
-                  }
-                </ng-template>
-              </li>
+            <ul ngbNav #nav="ngbNav" class="mat-tabs">
+              
+              <app-tabs [tabs]="userTabs" />
             </ul>
             <div [ngbNavOutlet]="nav"></div>
           </div>
