--- a/src/scss/settings/theme-variables.scss
+++ b/src/scss/settings/theme-variables.scss
@@ -39,6 +39,9 @@
   --ag-bg-color: #{$white};
   --ag-color: #262626;
   --ag-dropdown-bg-color:#{$white};
+
+  //--mi-label
+  --mi-label-color:#262626;
 }
 
 $header-height: 60px;
