--- a/src/app/comman/components/UI/radio/radio.component.html
+++ b/src/app/comman/components/UI/radio/radio.component.html
@@ -1,10 +1,8 @@
-  <mat-label >{{label}}<span class="danger">*</span></mat-label>
+  <mat-label class="label-mi">{{label}}<span class="danger">*</span></mat-label>
 <mat-radio-group
-  [value]="value"
-  (change)="onSelectionChange($event.value)"
->
-  @for(option of options; track option.value){
-  <mat-radio-button [value]="option.value">
+  (change)="onSelectionChange($event.value)" [value]="value">
+  @for(option of options; track option.value;){
+  <mat-radio-button [value]="option.value" >
     {{ option.display }}
   </mat-radio-button>
   }
