--- a/src/app/private/projects/projects.component.scss
+++ b/src/app/private/projects/projects.component.scss
@@ -1,26 +1,70 @@
-.list-projects{
-    margin-top: 40px;
+.list-projects {
+  margin-top: 40px;
 }
 .project-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: 20px;
-    margin-right: 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 20px;
+  margin-right: 25px;
 }
 .action-buttons {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.search-input{
-    height: 50px; width: 80%; margin-left: 100px;
-    // background-color: #cbc9c9;
-    border:1px solid #a7a7a7;
-    border-radius: 5px;
+.search-input {
+  height: 50px;
+  width: 80%;
+  margin-left: 100px;
+  // background-color: #cbc9c9;
+  border: 1px solid #a7a7a7;
+  border-radius: 5px;
 }
 
-.search-project{
-    margin-bottom: 20px;
+.search-project {
+  margin-bottom: 20px;
 }
+
+.column-settings-sidebar {
+  position: fixed;
+  right: -300px;
+  top: 0;
+  width: 300px;
+  height: 100%;
+  background: #fff;
+  border-left: 1px solid #ccc;
+  padding: 20px;
+  transition: right 0.3s ease-in-out;
+  z-index: 10000;
+  box-shadow: -2px 0 8px rgba(0, 0, 0, 0.2);
+  overflow-y: auto;
+
+  &.open {
+    right: 0;
+  }
+}
+
+.custonFilter {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  border-bottom: 1px solid;
+  gap: 5px;
+  padding-bottom: 10px;
+}
+
+.column-settings-sidebar {
+  background-color: var(--ag-bg-color);
+  color: var(--ag-color);
+  padding: 15px;}
+
+.sidebar-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  // margin-bottom: 10px;
+}
+
+
